@@ -1,6 +1,7 @@
 package vadl.lcb.template.lib.Target.MCTargetDesc;
 
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import vadl.configuration.LcbConfiguration;
@@ -8,6 +9,7 @@ import vadl.lcb.template.CommonVarNames;
 import vadl.lcb.template.LcbTemplateRenderingPass;
 import vadl.pass.PassResults;
 import vadl.viam.Specification;
+import vadl.viam.passes.dummyAbi.DummyAbi;
 
 /**
  * This file contains the implementation for assembly fixups.
@@ -45,10 +47,10 @@ public class EmitAsmBackendCppFilePass extends LcbTemplateRenderingPass {
   @Override
   protected Map<String, Object> createVariables(final PassResults passResults,
                                                 Specification specification) {
+    var abi =
+        (DummyAbi) specification.definitions().filter(x -> x instanceof DummyAbi).findFirst().get();
     return Map.of(CommonVarNames.NAMESPACE, specification.name(),
-        CommonVarNames.RELOCATIONS, List.of(
-            new Relocation("fixupKindIdentifierValue",
-                "functionIdentifierValue",
-                RelocationKind.PC_RELATIVE)));
+        "is64Bit", abi.stackPointer().registerFile().resultType().bitWidth() == 64,
+        "relocations", Collections.emptyList());
   }
 }
